Fix SimulationConfig issues

--- a/configs/fpvpl_throughput2_queueratio1.cfg
+++ b/configs/fpvpl_throughput2_queueratio1.cfg
@@ -1,12 +1,14 @@
 
-SUMO_SIMULATION_CONFIGURATION_FILE="data/cross.sumocfg"
-SUMO_SIMULATION_OUTPUT_FILE="tripinfo_isolated2.xml"
+[DEFAULT]
 
-DEMAND_NUMBER_SIMULATION_STEPS = 200
+SUMO_SIMULATION_CONFIGURATION_FILE=data/cross.sumocfg
+SUMO_SIMULATION_OUTPUT_FILE=tripinfo_isolated2.xml
+SUMO_SIMULATION_STEP_LENGTH=1
+
+DEMAND_NUMBER_SIMULATION_STEPS=200
 
 # Demand in vehicles every X seconds
-ISOLATED_INTERSECTION_DEMAND_PWE = 4 
+ISOLATED_INTERSECTION_DEMAND_PWE = 4
 ISOLATED_INTERSECTION_DEMAND_PEW = 5
 ISOLATED_INTERSECTION_DEMAND_PNS = 10
 ISOLATED_INTERSECTION_DEMAND_PSN = 12
-
