--- a/configs/fpvpl_throughput2_queueratio1.cfg
+++ b/configs/fpvpl_throughput2_queueratio1.cfg
@@ -2,6 +2,8 @@
 SUMO_SIMULATION_CONFIGURATION_FILE="data/cross.sumocfg"
 SUMO_SIMULATION_OUTPUT_FILE="tripinfo_isolated2.xml"
 
+SUMO_SIMULATION_STEP_LENGTH = 1
+
 DEMAND_NUMBER_SIMULATION_STEPS = 200
 
 # Demand in vehicles every X seconds
