Fix statistics plotter

--- a/configs/fpvpl_throughput1_queueratio2.cfg
+++ b/configs/fpvpl_throughput1_queueratio2.cfg
@@ -7,7 +7,7 @@ SUMO_SIMULATION_STEP_LENGTH=1
 
 CONSTANT_SATURATION_FLOW = 525
 
-DEMAND_NUMBER_SIMULATION_STEPS=200
+DEMAND_NUMBER_SIMULATION_STEPS=50
 
 # Demand in vehicles every X seconds
 ISOLATED_INTERSECTION_DEMAND_PWE = 4
@@ -21,7 +21,7 @@ TL_STAGE_LOST_TIME = 4
 TLC_STAGE_INITIAL_LENGTH = 20
 TLC_STAGE_MAX_LENGTH = 90
 
-TLC_QLEARNING_DISCRETIZE_QUEUE_LENGTH = 3.0
+TLC_QLEARNING_DISCRETIZE_QUEUE_LENGTH = 3
 
 TLC_QLEARNING_ACTION_MIN_GREEN = 2
 TLC_QLEARNING_ACTION_MAX_GREEN = 30
@@ -30,6 +30,6 @@ TLC_QLEARNING_ACTION_UNIT_LENGTH = 3
 QLEARNING_REWARD_WEIGHT_THROUGHPUT = 1
 QLEARNING_REWARD_WEIGHT_QUEUE_RATIO = 2
 
-LANE_MAX_ACCEPTABLE_QUEUE_OCCUPANCY = 0.7 # Max acceptable queue occupancy for each lane (used in QueueRatio reward function)
+LANE_MAX_ACCEPTABLE_QUEUE_OCCUPANCY = 0.7
+# Max acceptable queue occupancy for each lane (used in QueueRatio reward function)
 VEHICLE_AVG_LENGTH = 7
-
