Created RouteGenerator script to generate routes for single intersection simulation with varying demand

--- a/configs/simple_config.cfg
+++ b/configs/simple_config.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 
-SUMO_SIMULATION_CONFIGURATION_FILE=data/cross.sumocfg
+SUMO_SIMULATION_CONFIGURATION_FILE=simulation_files/sumocfgs/single.sumocfg
 SUMO_SIMULATION_OUTPUT_FILE=tripinfo_isolated2.xml
 SUMO_SIMULATION_STEP_LENGTH=1
 
@@ -16,6 +16,8 @@ ISOLATED_INTERSECTION_DEMAND_PSN = 12
 
 TL_STAGE_MIN_GREEN_TIME = 5
 TL_STAGE_LOST_TIME = 4
+
+TLC_TYPE=DeepQLearningAdaptiveRF
 
 TLC_STAGE_INITIAL_LENGTH = 20
 TLC_STAGE_MAX_LENGTH = 90
