--- a/configs/simple_deep_throughput.cfg
+++ b/configs/simple_deep_throughput.cfg
@@ -17,7 +17,10 @@ ISOLATED_INTERSECTION_DEMAND_PSN = 12
 TL_STAGE_MIN_GREEN_TIME = 5
 TL_STAGE_LOST_TIME = 4
 
-TLC_TYPE=DeepQLearningThroughputRF
+TLC_TYPE=DeepQLearning
+
+QLEARNING_REWARD_PARAM=Throughput
+QLEARNING_STATE_PARAMS=VehicleNumber,CurrentStage
 
 TLC_STAGE_INITIAL_LENGTH = 20
 TLC_STAGE_MAX_LENGTH = 90
