New Reward Cumulative Delay and simulation config

--- a/configs/simple_deep_throughput.cfg
+++ b/configs/simple_deep_throughput.cfg
@@ -20,7 +20,7 @@ TL_STAGE_LOST_TIME = 4
 TLC_TYPE=DeepQLearning
 
 QLEARNING_REWARD_PARAM=Throughput
-QLEARNING_STATE_PARAMS=VehicleNumber,CurrentStage
+QLEARNING_STATE_PARAMS=QueueLength,ApproachingVehicles,CurrentStage
 
 TLC_STAGE_INITIAL_LENGTH = 20
 TLC_STAGE_MAX_LENGTH = 90
