DeepQLearning - Get State Length and Number of hidden layer from config file

--- a/configs/simple_deep_avg_vehicle_number.cfg
+++ b/configs/simple_deep_avg_vehicle_number.cfg
@@ -22,6 +22,9 @@ TLC_TYPE=DeepQLearning
 QLEARNING_REWARD_PARAM=AverageVehicleNumber
 QLEARNING_STATE_PARAMS=QueueLength,ApproachingVehicles,CurrentStage
 
+QLEARNING_STATE_LENGTH=5
+DEEP_QLEARNING_HIDDEN_LAYER=40
+
 TLC_STAGE_INITIAL_LENGTH = 20
 TLC_STAGE_MAX_LENGTH = 90
 
