--- a/configs/simple_qlearning_number_stops.cfg
+++ b/configs/simple_qlearning_number_stops.cfg
@@ -20,20 +20,20 @@ TL_STAGE_LOST_TIME = 4
 TLC_TYPE=QLearning
 
 QLEARNING_REWARD_PARAM=NumberOfStops
-QLEARNING_STATE_PARAMS=QueueLength,ApproachingVehicles,CurrentStage
-QLEARNING_STATE_DISCRETIZE_PARAMS=3,3,0
+QLEARNING_STATE_PARAMS=VehicleNumber,CurrentStage
+QLEARNING_STATE_DISCRETIZE_PARAMS=3,0
 
 
-QLEARNING_STATE_LENGTH=5
+QLEARNING_STATE_LENGTH=3
 DEEP_QLEARNING_HIDDEN_LAYER=40
 
 TLC_STAGE_INITIAL_LENGTH = 20
-TLC_STAGE_MAX_LENGTH = 90
+TLC_STAGE_MAX_LENGTH = 120
 
 TLC_QLEARNING_DISCRETIZE_QUEUE_LENGTH = 3
 
 TLC_QLEARNING_ACTION_MIN_GREEN = 2
-TLC_QLEARNING_ACTION_MAX_GREEN = 30
+TLC_QLEARNING_ACTION_MAX_GREEN = 40
 TLC_QLEARNING_ACTION_UNIT_LENGTH = 3
 
 QLEARNING_REWARD_WEIGHT_THROUGHPUT = 2
