--- a/configs/single_basic_qlearning_act_throughput_mqr.cfg
+++ b/configs/single_basic_qlearning_act_throughput_mqr.cfg
@@ -31,6 +31,10 @@ TLC_QLEARNING_ACTION_MIN_GREEN = 2
 TLC_QLEARNING_ACTION_MAX_GREEN = 40
 TLC_QLEARNING_ACTION_UNIT_LENGTH = 3
 
+
+QLEARNING_REWARD_WEIGHT_THROUGHPUT = 1
+QLEARNING_REWARD_WEIGHT_QUEUE_RATIO = 1
+
 # Max acceptable queue occupancy for each lane (used in QueueRatio reward function)
 LANE_MAX_ACCEPTABLE_QUEUE_OCCUPANCY = 0.7
 VEHICLE_AVG_LENGTH = 7
