prepare final simulation

--- a/configs/single_final_qlearning_avg_vehicle_number.cfg
+++ b/configs/single_final_qlearning_avg_vehicle_number.cfg
@@ -17,9 +17,7 @@ QLEARNING_EPSILON_GREEDY_RATE=0.7
 QLEARNING_GAMMA_VALUE=0.6
 QLEARNING_LEARNING_RATE=0.001
 
-QLEARNING_REWARD_ADAPTIVE_STEEPNESS = 15
-
-QLEARNING_REWARD_PARAM=AdaptiveLaneOccupancyReward,AverageVehicleNumber,Throughput
+QLEARNING_REWARD_PARAM=AverageVehicleNumber
 QLEARNING_STATE_PARAMS=VehicleNumberDiscretized,CurrentStage
 QLEARNING_STATE_DISCRETIZE_PARAMS=3,0
 
