--- a/configs/single_final_fixed_time.cfg
+++ b/configs/single_final_fixed_time.cfg
@@ -9,30 +9,24 @@ CONSTANT_SATURATION_FLOW = 525
 
 TL_STAGE_MIN_GREEN_TIME = 5
 TL_STAGE_LOST_TIME = 4
+TL_STAGE_GREEN_TIME = 35
 
-TLC_TYPE=QLearning
+TLC_TYPE=FixedTime
 
+QLEARNING_REWARD_PARAM=Throughput
+QLEARNING_STATE_PARAMS=QueueLength,ApproachingVehicles,CurrentStage
+QLEARNING_STATE_DISCRETIZE_PARAMS=3,3,0
 
-QLEARNING_EPSILON_GREEDY_RATE=0.7
-QLEARNING_GAMMA_VALUE=0.6
-QLEARNING_LEARNING_RATE=0.001
-
-QLEARNING_REWARD_ADAPTIVE_STEEPNESS = 15
-
-QLEARNING_REWARD_PARAM=AdaptiveLaneOccupancyReward,AverageVehicleNumber,Throughput
-QLEARNING_STATE_PARAMS=VehicleNumberDiscretized,CurrentStage
-QLEARNING_STATE_DISCRETIZE_PARAMS=3,0
-
-QLEARNING_STATE_LENGTH=3
+QLEARNING_STATE_LENGTH=5
 DEEP_QLEARNING_HIDDEN_LAYER=40
 
 TLC_STAGE_INITIAL_LENGTH = 20
-TLC_STAGE_MAX_LENGTH = 120
+TLC_STAGE_MAX_LENGTH = 90
 
 TLC_QLEARNING_DISCRETIZE_QUEUE_LENGTH = 3
 
 TLC_QLEARNING_ACTION_MIN_GREEN = 2
-TLC_QLEARNING_ACTION_MAX_GREEN = 40
+TLC_QLEARNING_ACTION_MAX_GREEN = 30
 TLC_QLEARNING_ACTION_UNIT_LENGTH = 3
 
 QLEARNING_REWARD_WEIGHT_THROUGHPUT = 2
