--- a/configs/single_final_qlearning_adaptative_delay_throughput.cfg
+++ b/configs/single_final_qlearning_adaptative_delay_throughput.cfg
@@ -19,7 +19,8 @@ QLEARNING_LEARNING_RATE=0.001
 
 QLEARNING_REWARD_ADAPTIVE_STEEPNESS = 15
 
-QLEARNING_REWARD_PARAM=AdaptiveLaneOccupancyReward,AverageVehicleNumber,Throughput
+
+QLEARNING_REWARD_PARAM=AdaptiveLaneOccupancyReward,WastedTimePenaltyLogistic,CumulativeVehicleDelay,Throughput
 QLEARNING_STATE_PARAMS=VehicleNumberDiscretized,CurrentStage
 QLEARNING_STATE_DISCRETIZE_PARAMS=3,0
 
