--- a/configs/single_final_qlearning_throughput.cfg
+++ b/configs/single_final_qlearning_throughput.cfg
@@ -6,21 +6,17 @@ SUMO_SIMULATION_STEP_LENGTH=1
 
 CONSTANT_SATURATION_FLOW = 525
 
-
 TL_STAGE_MIN_GREEN_TIME = 5
 TL_STAGE_LOST_TIME = 4
 
 TLC_TYPE=QLearning
 
-
 QLEARNING_EPSILON_GREEDY_RATE=0.7
 QLEARNING_GAMMA_VALUE=0.6
 QLEARNING_LEARNING_RATE=0.001
 
-QLEARNING_REWARD_ADAPTIVE_STEEPNESS = 15
-
-QLEARNING_REWARD_PARAM=AdaptiveLaneOccupancyReward,AverageVehicleNumber,Throughput
-QLEARNING_STATE_PARAMS=VehicleNumberDiscretized,CurrentStage
+QLEARNING_REWARD_PARAM=Throughput
+QLEARNING_STATE_PARAMS=QueueLengthDiscretized,CurrentStage
 QLEARNING_STATE_DISCRETIZE_PARAMS=3,0
 
 QLEARNING_STATE_LENGTH=3
@@ -35,7 +31,7 @@ TLC_QLEARNING_ACTION_MIN_GREEN = 2
 TLC_QLEARNING_ACTION_MAX_GREEN = 40
 TLC_QLEARNING_ACTION_UNIT_LENGTH = 3
 
-QLEARNING_REWARD_WEIGHT_THROUGHPUT = 2
+QLEARNING_REWARD_WEIGHT_THROUGHPUT = 1
 QLEARNING_REWARD_WEIGHT_QUEUE_RATIO = 1
 
 # Max acceptable queue occupancy for each lane (used in QueueRatio reward function)
