prepare final simulation - inf_point

--- a/configs/single_final_qlearning_adaptative_veh_n_throughput.cfg
+++ b/configs/single_final_qlearning_adaptative_veh_n_throughput.cfg
@@ -18,6 +18,7 @@ QLEARNING_GAMMA_VALUE=0.6
 QLEARNING_LEARNING_RATE=0.001
 
 QLEARNING_REWARD_ADAPTIVE_STEEPNESS = 15
+QLEARNING_REWARD_ADAPTIVE_INFLECTION_POINT = -0.1
 
 QLEARNING_REWARD_PARAM=AdaptiveLaneOccupancyReward,AverageVehicleNumber,Throughput
 QLEARNING_STATE_PARAMS=VehicleNumberDiscretized,CurrentStage
