--- a/configs/single_final_fixed_time.cfg
+++ b/configs/single_final_fixed_time.cfg
@@ -17,6 +17,10 @@ QLEARNING_REWARD_PARAM=Throughput
 QLEARNING_STATE_PARAMS=QueueLength,ApproachingVehicles,CurrentStage
 QLEARNING_STATE_DISCRETIZE_PARAMS=3,3,0
 
+QLEARNING_EPSILON_GREEDY_RATE=0.7
+QLEARNING_GAMMA_VALUE=0.6
+QLEARNING_LEARNING_RATE=0.001
+
 QLEARNING_STATE_LENGTH=5
 DEEP_QLEARNING_HIDDEN_LAYER=40
 
